@@ -1,3 +1,3 @@
 #,,,,,,,,,,,,,,,,,,,,,,"generated_by='OpenQuake engine 3.8.0-git57e535648b',start_date='2019-10-16T08:35:02',checksum=3027975162,kind='mean',investigation_time=50.0,imt='PGA'"
 lon,lat,depth,poe-0.0050000,poe-0.0068764,poe-0.0094569,poe-0.0130059,poe-0.0178867,poe-0.0245991,poe-0.0338306,poe-0.0465264,poe-0.0639867,poe-0.0879994,poe-0.1210235,poe-0.1664408,poe-0.2289021,poe-0.3148036,poe-0.4329420,poe-0.5954149,poe-0.8188600,poe-1.1261588,poe-1.5487796,poe-2.1300000
-0.00000,0.00000,0.00000,9.61350798e-04,9.33694909e-04,8.89713847e-04,8.26847716e-04,7.45663980e-04,6.50334521e-04,5.47849078e-04,4.46081124e-04,3.51773724e-04,2.69272642e-04,2.00310333e-04,1.44663380e-04,1.01078719e-04,6.78963404e-05,4.34891762e-05,2.62769191e-05,1.48035525e-05,7.67621502e-06,3.61472083e-06,1.51469188e-06
+0.00000,0.00000,0.00000,9.613508E-04,9.336949E-04,8.897138E-04,8.268477E-04,7.456640E-04,6.503345E-04,5.478490E-04,4.460811E-04,3.517737E-04,2.692727E-04,2.003103E-04,1.446634E-04,1.010787E-04,6.789634E-05,4.348918E-05,2.627692E-05,1.480355E-05,7.676215E-06,3.614721E-06,1.514692E-06
